--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "seed": "medusa seed -f ./data/seed.json",
     "build": "babel src -d dist --extensions \".ts,.js\"",
-    "start": "medusa develop"
+    "start": "medusa migrations run && medusa start"
+
   },
   "dependencies": {
     "@medusajs/medusa": "^1.6.0",
